k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signpod-back
spec:
  type: NodePort
  selector:
    app: signpod-back
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
